tests/bad/01_missing_semicolon.src
# Test: Missing semicolon
void main([string] args) {
    return 42  # Missing semicolon
}
